kubernetes/apps/default/letsblockit/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &app letsblockit
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`letsblockit.${SECRET_DOMAIN}`) && PathPrefix(`/list/`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: *app
          namespace: default
          port: 8765
    - kind: Rule
      match: Host(`letsblockit.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        - name: basicauth
      services:
        - name: *app
          namespace: default
          port: 8765

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
